--- a/assets/css/sidebarStyle.css
+++ b/assets/css/sidebarStyle.css
@@ -6,17 +6,19 @@
 	}
 	
 	.navi {
-	    margin: 20px 0px;
+	    margin-top: 20px;
+		margin-left: 30px; 	
+	
 	    width: 220px;
 	    float: left;
 	}
-	.navi .main-nav {
+	.navi .main-side_nav {
 	    list-style-type: none;
 	    margin: 0px;
 	    padding: 0px;
 	}
 	
-	.navi .main-nav > li {
+	.navi .main-side_nav > li {
 	    position: relative;
 	    margin: 1px;
 	}
@@ -25,11 +27,11 @@
 	    line-height: 18px;
 	}
 	
-	.navi .main-nav {
+	.navi .main-side_nav {
 	    list-style-type: none;
 	}
 	
-	.navi .main-nav > li a.light {
+	.navi .main-side_nav > li a.light {
 	    color: rgb(51, 51, 51);
 	    background-color: rgb(245, 245, 245);
 	    background-image: -moz-linear-gradient(center top , rgb(250, 250, 250), rgb(237, 237, 237));
@@ -37,7 +39,7 @@
 	    box-shadow: 0px 0px 1px 1px rgb(255, 255, 255) inset;
 	}
 	
-	.navi .main-nav > li a {
+	.navi .main-side_nav > li a {
 	    display: block;
 	    padding: 8px 8px 8px 45px;
 	    border: 1px solid rgb(166, 166, 166);
@@ -49,11 +51,11 @@
 	    text-decoration: none;
 	}
 	
-	.navi .main-nav > li a.light .ico {
+	.navi .main-side_nav > li a.light .ico {
 	    box-shadow: 1px 1px 1px rgb(238, 238, 238), 1px 1px 0px 1px rgb(21, 21, 21) inset;
 	}
 	
-	.navi .main-nav > li a .ico {
+	.navi .main-side_nav > li a .ico {
 	    position: absolute;
 	    top: 5px;
 	    left: 8px;
@@ -79,7 +81,7 @@
 	}
 	
 	/*right label section*/
-	.navi .main-nav > li a .label {
+	.navi .main-side_nav > li a .label {
 	    float: right;
 	}
 	.label-warning, .badge-warning {
@@ -101,7 +103,7 @@
 	}
 	
 	/*this is the hover effect for the nav_items*/
-	.navi .main-nav > li a.light:hover {
+	.navi .main-side_nav > li a.light:hover {
 	    border: 1px solid rgb(39, 39, 39);
 	    color: rgb(238, 238, 238);
 	    background-color: rgb(54, 54, 54);
