--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,3 +136,15 @@ h3 > a {
 	font-size: 21px;
 	font-weight: bold;
 }
+
+.table_border_top {
+	border-top: 1px solid #a6a6a6;
+	width: 100%; 
+	height: 10px;
+}
+
+.table_border_bottom {
+	border-bottom: 1px solid #a6a6a6;
+	width: 100%; 
+	height: 10px;
+}
