--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -2830,3 +2830,17 @@ ul.steps li.active span {
     white-space: normal;
   }
 }
+
+
+
+.table_border_top {
+	border-top: 1px solid #a6a6a6;
+	width: 100%; 
+	height: 10px;
+}
+
+.table_border_bottom {
+	border-bottom: 1px solid #a6a6a6;
+	width: 100%; 
+	height: 10px;
+}
